# epanet-playground

./: CMakeLists.txt
python/: CMakeLists.txt  pyepanet2.i
python/jsonrpc/: client.py  server.py
src/: CMakeLists.txt  epanet.c  libepanet2.so.map  main.c
