OPTION(WITH_PYTHON "Generate epanet python package" "OFF")

IF(WITH_PYTHON)
    FIND_PACKAGE(SWIG REQUIRED)
    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

    MESSAGE(STATUS SWIG ${CMAKE_BINARY_DIR})
    SET(CMAKE_SWIG_OUTDIR ${LIBRARY_OUTPUT_PATH})

    INCLUDE(${SWIG_USE_FILE})

    INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

    SET(CMAKE_SWIG_FLAGS "")
    SET_SOURCE_FILES_PROPERTIES(pyepanet2.i PROPERTIES)

    SWIG_ADD_MODULE(pyepanet2 python pyepanet2.i)
    SWIG_LINK_LIBRARIES(pyepanet2 epanet2 ${PYTHON_LIBRARIES})
ELSE()
    ADD_DEFINITIONS(-DPYTHON_EMBEDDING_DISABLED)
ENDIF()
